--- a/package.json
+++ b/package.json
@@ -1,20 +1,24 @@
 {
-  "name": "curso-nodejs-blog",
+  "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.0",
+    "connect-flash": "^0.1.1",
+    "express": "^4.18.1",
+    "express-handlebars": "^6.0.6",
+    "express-session": "^1.17.3",
+    "mongoose": "^6.5.1",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0"
+  },
+  "name": "blogapp",
   "version": "1.0.0",
-  "description": "Blog criado durante meus estudos de node.js, seguindo a playlist \"Curso de Node.js\" do canal \"Victor Lima - Guia do Programador\"",
-  "main": "blogapp/app.js",
+  "main": "app.js",
+  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node blogapp/app.js"
+    "start": "node app.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/KeftonDavid/curso-nodejs-blog.git"
-  },
-  "author": "KeftonDavid",
+  "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/KeftonDavid/curso-nodejs-blog/issues"
-  },
-  "homepage": "https://github.com/KeftonDavid/curso-nodejs-blog#readme"
+  "description": ""
 }
